--- a/docs/fhatos.adoc
+++ b/docs/fhatos.adoc
@@ -38,12 +38,12 @@ https://en.wikipedia.org/wiki/Distributed_operating_system[distributed operating
 https://en.wikipedia.org/wiki/ESP8266[ESP8266], https://en.wikipedia.org/wiki/ESP32[ESP32],
 https://en.wikipedia.org/wiki/Raspberry_Pi[Raspberry PI], and similar fabrications.
 Moreover, sandboxed deployments on Linux and MacOSX systems offer the cluster large memory/storage space and processor speed.
-All FhatOS resources, from individual datum, complex data structures, files, and threads exist within a single
+All [blue]*f*​[red]#H#​[lime]*A*​[yellow]#T#​[aqua]#O#​[fuchsia]#S#​ resources, from individual datum, complex data structures, files, and threads exist within a single
 https://en.wikipedia.org/wiki/Uniform_Resource_Identifier[URI] address space called **furi**
 (pronounced "fury" or "fhat URI") -- a subset of the common URI space.
 Programs are written in http://mmadt.org[mm-ADT] or https://en.wikipedia.org/wiki/C_(programming_language)[C] / https://en.wikipedia.org/wiki/C%2B%2B[C++]
 and communicate with one another via storage structures that maintain subsets of the fURI space.
-In general, FhatOS provides a convenient medium for coordinating a heterogeneous collection of hardware processors and their peripheries.
+In general, [red]*f*​[lime]#H#​[fuchsia]#A#​[blue]#T#​[yellow]*O*​[aqua]#S#​ provides a convenient medium for coordinating a heterogeneous collection of hardware processors and their peripheries.
 
 https://github.com/phaseshift-studio/fhatos[🐙 **source code**]
 
@@ -97,7 +97,7 @@ Contents of Tab B.
 
 == FhatOS Boot Loader
 
-The following output is from a Linux boot of FhatOS.
+The following output is from a Linux boot of [red]#F#​[lime]*H*​[fuchsia]#A#​[yellow]*t*​[aqua]#O#​[blue]#S#​.
 The purpose of this documentation is to explain the mechanics of the boot process and beyond.
 
 [source,bash]
@@ -124,15 +124,15 @@ $ fhatos --boot:config=../conf/boot-loader.obj
       .oO loading system objs Oo.
 [INFO]  [/sys/scheduler] scheduler started
 [INFO]  [/sys/router] router started
-[INFO]  [/sys/router] main memory [total=>6912]
+[INFO]  [/sys/router] main memory [total=>6784]
 [INFO]  [/sys/router] heap <none> spanning /sys/# mounted
 [INFO]  [/sys/router] heap <none> spanning /mnt/# mounted
 [INFO]  [/sys/router] heap /mnt/boot spanning /boot/# mounted
-[INFO]  [/sys/router] ../../../conf/boot_config.obj boot config file loaded (size: 746 bytes)
+[INFO]  [/sys/router] ../../../conf/boot_config.obj boot config file loaded (size: 758 bytes)
 [WARN]  [/sys/router] router has no auto-prefix configuration: noobj
 [INFO]  [/sys/router] 
   [
-    router=>[resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]]
+    router=>[resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/mmadt/ext/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]]
     scheduler=>[def_stack_size=>8096]
     mqtt=>[broker=>mqtt://chibi.local:1883,client=>fhatos_client,cache=>true]
     wifi=>[ssid=>Rodkins-2G,password=>'puppymama',mdns=>fhatos]
@@ -149,6 +149,19 @@ $ fhatos --boot:config=../conf/boot-loader.obj
       .oO loading mmadt lang Oo.
 [INFO]  [/mnt/mmadt] query processor /mnt/mmadt/q/doc attached
 [INFO]  [/sys/router] heap /mnt/mmadt spanning /mmadt/# mounted
+[INFO]  [/sys/type] /mmadt/ext/char type defined
+[INFO]  [/sys/type] /mmadt/ext/int8 type defined
+[INFO]  [/sys/type] /mmadt/ext/uint8 type defined
+[INFO]  [/sys/type] /mmadt/ext/int16 type defined
+[INFO]  [/sys/type] /mmadt/ext/int32 type defined
+[INFO]  [/sys/type] /mmadt/ext/nat type defined
+[INFO]  [/sys/type] /mmadt/ext/C type defined
+[INFO]  [/sys/type] /mmadt/ext/prnt type defined
+[INFO]  [/sys/type] /mmadt/ext/Ox type defined
+[INFO]  [/sys/type] /mmadt/ext/ms type defined
+[INFO]  [/sys/type] /mmadt/ext/sec type defined
+[INFO]  [/sys/type] /mmadt/ext/secret type defined
+[INFO]  [/sys/type] /mmadt/ext/secret/::/mmadt/as type defined
       .oO loading fos models Oo.
 [INFO]  [/sys/router] heap /mnt/io spanning /io/# mounted
 [INFO]  [/sys/router] /io/terminal obj loaded
@@ -193,14 +206,14 @@ Many of the code examples attempt to highlight their unique, individual personal
 To learn their names, hover on their image.
 ====
 
-image:cooties.png[width=140,float=left,title=cooties] FhatOS is designed according to the undertsanding that computing is composed of 3 fundamental phenomena: **structure** (space), **process** (time), and **language** (perspective).
-The core FhatOS kernel provides the following resources.
+image:cooties.png[width=140,float=left,title=cooties] [yellow]*f*​[red]*h*​[fuchsia]#a#​[aqua]#t#​[blue]*O*​[lime]*S*​ is designed according to the undertsanding that computing is composed of 3 fundamental phenomena: **structure** (space), **process** (time), and **language** (perspective).
+The core [yellow]*f*​[lime]#H#​[blue]*a*​[fuchsia]#t#​[red]*O*​[aqua]*S*​ kernel provides the following resources.
 
 . `/sys/scheduler` (**process**): provides all thread, fiber, and coroutine processes compute time on the underlying hardware processor.
 . `/sys/router` (**structure**) : maintains the multi-level tuple space used for storing and retrieving `objs` in the fURI address space.
 . `/mmadt/` (**language**): exposes parsing, type management, and caching functionality to all mm-ADT programs.
 
-The FhatOS scheduler and router are accessible to the user when their respective fURIs are dereferenced (`*` or `from`).
+The [lime]*F*​[yellow]*h*​[fuchsia]#a#​[red]*t*​[blue]#o#​[aqua]#s#​ scheduler and router are accessible to the user when their respective fURIs are dereferenced (`*` or `from`).
 
 ++++
 <!-- 🐖 ./main_runner.out
@@ -261,7 +274,7 @@ fhatos> */sys/router
 =>]
 ==>frame=>[rec][_]
 ==>config=>[
-===>resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]
+===>resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/mmadt/ext/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]
 =>]
 ==>query=>[
 ===>write=>[lock=>lock?obj{?}<=obj{?}()[cpp],sub=>sub?obj{?}<=obj()[cpp]]
@@ -297,12 +310,15 @@ fhatos> */mmadt/#/
 ==>/mmadt/block=>block?obj<=obj{?}(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/bool=>[bool][_]
 ==>/mmadt/bool/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/bool/::/mmadt/div=>div(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/bool/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
+==>/mmadt/bool/::/mmadt/minus=>minus(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/bool/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/bool/::/mmadt/neg=>neg(from(0?self,_)[cpp])[cpp]
 ==>/mmadt/bool/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/count=>count?int<=objs{*}()[cpp]
 ==>/mmadt/delay=>delay(from(0?millis,_)[cpp])[cpp]
+==>/mmadt/div=>div(from(0?rhs,noobj)[cpp])
 ==>/mmadt/drop=>drop?obj{?}<=obj{?}(from(0?obj,_)[cpp])[cpp]
 ==>/mmadt/each=>each(from(0?poly,noobj)[cpp])
 ==>/mmadt/embed=>embed()[cpp]
@@ -310,6 +326,19 @@ fhatos> */mmadt/#/
 ==>/mmadt/eq=>eq(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/error=>[error][_]
 ==>/mmadt/explain=>explain()[cpp]
+==>/mmadt/ext/C=>C()[is(gte(-273.149994))]
+==>/mmadt/ext/Ox=>Ox()[is(true)]
+==>/mmadt/ext/char=>char()[merge(2).count().is(eq(1))]
+==>/mmadt/ext/int16=>[int16][_]
+==>/mmadt/ext/int32=>[int32][_]
+==>/mmadt/ext/int8=>uint8()[is(gte(-127)).is(lte(128))]
+==>/mmadt/ext/ms=>[int][_]
+==>/mmadt/ext/nat=>nat()[is(gte(0))]
+==>/mmadt/ext/prnt=>prnt()[is(gte(0.000000)).is(lte(100.000000))]
+==>/mmadt/ext/sec=>[int][_]
+==>/mmadt/ext/secret=>[str][_]
+==>/mmadt/ext/secret/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/ext/uint8=>uint8()[is(gte(0)).is(lte(255))]
 ==>/mmadt/frame=>frame?rec<=obj{?}()[cpp]
 ==>/mmadt/from=>from?obj{?}<=obj{?}(from(0?uri,_)[cpp],from(1?default,noobj)[cpp])[cpp]
 ==>/mmadt/goto=>goto(from(0?inst_id,noobj)[cpp])[cpp]
@@ -320,11 +349,13 @@ fhatos> */mmadt/#/
 ==>/mmadt/inst/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
 ==>/mmadt/int=>[int][_]
 ==>/mmadt/int/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/div=>div(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/int/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/int/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/int/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
 ==>/mmadt/int/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/int/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/int/::/mmadt/minus=>minus(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/int/::/mmadt/mod=>mod(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/int/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/int/::/mmadt/neg=>neg(from(0?self,_)[cpp])[cpp]
@@ -333,9 +364,11 @@ fhatos> */mmadt/#/
 ==>/mmadt/lock=>lock(user=>_)[cpp]
 ==>/mmadt/lshift=>lshift()
 ==>/mmadt/lst=>[lst][_]
+==>/mmadt/lst/::/mmadt/div=>div(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/lst/::/mmadt/each=>each(from(0?lst,_)[cpp])[cpp]
 ==>/mmadt/lst/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
 ==>/mmadt/lst/::/mmadt/merge=>merge?objs{*}<=lst(from(0?count,2147483647)[cpp])[cpp]
+==>/mmadt/lst/::/mmadt/minus=>minus(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/lst/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/lst/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/lst/::/mmadt/within=>within(from(0?code,noobj)[cpp])[cpp]
@@ -343,6 +376,7 @@ fhatos> */mmadt/#/
 ==>/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])
 ==>/mmadt/map=>map?obj{?}<=obj{?}(from(0?mapping,noobj)[cpp])[cpp]
 ==>/mmadt/merge=>merge?obj{?}<=obj(from(0?count,2147483647)[cpp])[cpp]
+==>/mmadt/minus=>minus(from(0?rhs,noobj)[cpp])
 ==>/mmadt/mod=>mod(from(0?rhs,noobj)[cpp])
 ==>/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])
 ==>/mmadt/neg=>neg(from(0?self,_)[cpp])
@@ -355,18 +389,22 @@ fhatos> */mmadt/#/
 ==>/mmadt/prod=>prod?obj<=objs{*}()[cpp]
 ==>/mmadt/real=>[real][_]
 ==>/mmadt/real/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/real/::/mmadt/div=>div(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/real/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/real/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/real/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
 ==>/mmadt/real/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/real/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
+==>/mmadt/real/::/mmadt/minus=>minus(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/real/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/real/::/mmadt/neg=>neg(from(0?self,_)[cpp])[cpp]
 ==>/mmadt/real/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/rec=>[rec][_]
+==>/mmadt/rec/::/mmadt/div=>div(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/rec/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
 ==>/mmadt/rec/::/mmadt/lshift=>lshift(level=>1)[cpp]
 ==>/mmadt/rec/::/mmadt/merge=>merge?objs{*}<=rec(from(0?count,2147483647)[cpp])[cpp]
+==>/mmadt/rec/::/mmadt/minus=>minus(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/rec/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/rec/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/rec/::/mmadt/rshift=>rshift(from(0?prefix,noobj)[cpp])[cpp]
@@ -378,12 +416,14 @@ fhatos> */mmadt/#/
 ==>/mmadt/start=>start?objs{*}<=noobj{.}(from(0?starts,noobj)[cpp])[cpp]
 ==>/mmadt/str=>[str][_]
 ==>/mmadt/str/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/div=>div(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/str/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/str/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/str/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
 ==>/mmadt/str/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/str/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/str/::/mmadt/merge=>merge?objs{*}<=str(from(0?count,2147483647)[cpp])[cpp]
+==>/mmadt/str/::/mmadt/minus=>minus(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/str/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/str/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/str/::/mmadt/within=>within(from(0?code,noobj)[cpp])[cpp]
@@ -392,6 +432,7 @@ fhatos> */mmadt/#/
 ==>/mmadt/type=>type?uri<=obj{?}(from(0?obj,_)[cpp])[cpp]
 ==>/mmadt/uri=>[uri][_]
 ==>/mmadt/uri/::/mmadt/as=>as(from(0?type,noobj)[cpp])[cpp]
+==>/mmadt/uri/::/mmadt/div=>div(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/uri/::/mmadt/gt=>gt(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/uri/::/mmadt/gte=>gte(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/uri/::/mmadt/inspect=>inspect(from(0?inspected,_)[cpp])[cpp]
@@ -399,6 +440,7 @@ fhatos> */mmadt/#/
 ==>/mmadt/uri/::/mmadt/lt=>lt(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/uri/::/mmadt/lte=>lte(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/uri/::/mmadt/merge=>merge?objs{*}<=uri(from(0?count,2147483647)[cpp])[cpp]
+==>/mmadt/uri/::/mmadt/minus=>minus(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/uri/::/mmadt/mult=>mult(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/uri/::/mmadt/plus=>plus(from(0?rhs,noobj)[cpp])[cpp]
 ==>/mmadt/uri/::/mmadt/rshift=>rshift(level=>1)[cpp]
@@ -414,7 +456,7 @@ fhatos> */mmadt/#/
 
 All resources off the specified kernel fURIs can be interacted with, but can not be shutdown.
 That is, `/sys/# -> noobj` yields an error.
-Without these resources, FhatOS will not function propertly.
+Without these resources, [blue]#F#​[red]#h#​[yellow]*A*​[lime]#t#​[aqua]#O#​[fuchsia]*S*​ will not function propertly.
 
 User resources are typicaly structured as below:
 
@@ -456,7 +498,7 @@ fhatos> */io/console
 
 === The mm-ADT Language
 
-FhatOS software can be written in C/C\++ or mm-ADT (**multi-model abstract data type**). mm-ADT is a reflective, cluster-oriented programming language with a fluent syntax and an an underlying monoidal structure.
+[aqua]#F#​[red]#h#​[lime]*a*​[blue]#t#​[yellow]*o*​[fuchsia]#s#​ software can be written in C/C\++ or mm-ADT (**multi-model abstract data type**). mm-ADT is a reflective, cluster-oriented programming language with a fluent syntax and an an underlying monoidal structure.
 Every expression in mm-ADT yields an `obj` (object).
 An `obj` can be any one of
 
@@ -475,7 +517,7 @@ The 7 structural types (5 mono-types and 2 poly-types) are described below.
 . `/mmadt/int`: The set of \$n\$-bit integers between \$-2^(n-1)\$ and \$2^(n-1)\$.
 . `/mmadt/real`: The set of \$n\$-bit floating point values between `-...` and `....`.
 . `/mmadt/str`: The infinite set of all UTF-8 character sequences.
-. `/mmadt/uri`: The infinite set of all fHatOs UTF-8 Uniform Resource Identifiers (fURIs).
+. `/mmadt/uri`: The infinite set of all [red]#f#​[lime]#H#​[fuchsia]#A#​[blue]#T#​[yellow]*o*​[aqua]#s#​ UTF-8 Uniform Resource Identifiers (fURIs).
 . `/mmadt/lst`: An (un)ordered collection of zero or more `objs`.
 . `/mmadt/rec`: An (un)ordered collection of key/value pair `objs`, where keys are unique.
 
@@ -484,6 +526,33 @@ The 7 structural types (5 mono-types and 2 poly-types) are described below.
 
 Given the frequency of use of base types, specifying the type is not necessary as, given the value, the base type can be deduced.
 
+[tabs]
+====
+bool::
++
+--
+++++
+<!-- 🐖 ./main_runner.out "/mmadt/bool[true]" "bool[true]" "true" -->
+++++
+
+[source,mmadt]
+----
+fhatos> /mmadt/bool[true]
+==>true
+fhatos> bool[true]
+==>true
+fhatos> true
+==>true
+----
+
+++++
+<!-- 🐓 -->
+++++
+--
+
+int::
++
+--
 ++++
 <!-- 🐖 ./main_runner.out "/mmadt/int[6]" "int[6]" "6" -->
 ++++
@@ -501,6 +570,151 @@ fhatos> 6
 ++++
 <!-- 🐓 -->
 ++++
+--
+
+real::
++
+--
+++++
+<!-- 🐖 ./main_runner.out "/mmadt/real[6.2]" "real[6.2]" "6.2" -->
+++++
+
+[source,mmadt]
+----
+fhatos> /mmadt/real[6.2]
+==>6.2
+fhatos> real[6.2]
+==>6.2
+fhatos> 6.2
+==>6.2
+----
+
+++++
+<!-- 🐓 -->
+++++
+--
+
+str::
++
+--
+++++
+<!-- 🐖 ./main_runner.out "/mmadt/str['cooties']" "str['cooties']" "'cooties'" -->
+++++
+
+[source,mmadt]
+----
+fhatos> /mmadt/str['cooties']
+==>'cooties'
+fhatos> str['cooties']
+==>'cooties'
+fhatos> 'cooties'
+==>'cooties'
+----
+
+++++
+<!-- 🐓 -->
+++++
+--
+
+uri::
++
+--
+++++
+<!-- 🐖 ./main_runner.out "/mmadt/uri[/dog/curly]" "uri[/dog/curly]" "/dog/curly" -->
+++++
+
+[source,mmadt]
+----
+fhatos> /mmadt/uri[/dog/curly]
+==>/dog/curly
+fhatos> uri[/dog/curly]
+==>/dog/curly
+fhatos> /dog/curly
+==>/dog/curly
+----
+
+++++
+<!-- 🐓 -->
+++++
+--
+
+lst::
++
+--
+++++
+<!-- 🐖 ./main_runner.out
+[HIDDEN] /io/console/config/nest -> 0
+/mmadt/lst[['a',2,true]]
+lst[['a',2,true]]
+['a',2,true]
+-->
+++++
+
+[source,mmadt]
+----
+fhatos> /mmadt/lst[['a',2,true]]
+==>['a',2,true]
+fhatos> lst[['a',2,true]]
+==>['a',2,true]
+fhatos> ['a',2,true]
+==>['a',2,true]
+----
+
+++++
+<!-- 🐓 -->
+++++
+--
+
+rec::
++
+--
+++++
+<!-- 🐖 ./main_runner.out
+[HIDDEN] /io/console/config/nest->0
+/mmadt/rec[[a=>6,b=>false]]
+rec[[a=>6,b=>false]]
+[a=>6,b=>false]
+-->
+++++
+
+[source,mmadt]
+----
+fhatos> /mmadt/rec[[a=>6,b=>false]]
+==>[a=>6,b=>false]
+fhatos> rec[[a=>6,b=>false]]
+==>[a=>6,b=>false]
+fhatos> [a=>6,b=>false]
+==>[a=>6,b=>false]
+----
+
+++++
+<!-- 🐓 -->
+++++
+--
+
+noobj::
++
+--
+++++
+<!-- 🐖 ./main_runner.out
+/mmadt/noobj[]
+noobj[]
+
+-->
+++++
+
+[source,mmadt]
+----
+fhatos> /mmadt/noobj[]
+fhatos> noobj[]
+fhatos> 
+
+----
+
+++++
+<!-- 🐓 -->
+++++
+--
 
 ====
 
@@ -546,7 +760,6 @@ fhatos> [a=>1,b=>'2',c=>3.0]
 
 .Controlling Base Value Bit Encoding
 ====
-
 TIP: The bit-length of `int` and `real` can be specified at boot time via the boot-loader.
 Other machines in the cluster with a different bit-length encodings can still be communicated with.
 However, overflow is possible, but can be automatically checked using types in `/mmadt/ext/` such as:
@@ -554,6 +767,7 @@ However, overflow is possible, but can be automatically checked using types in `
 
 [cols="5,5"]
 |===
+
 a|
 ++++
 <!-- 🐖 ./main_runner.out
@@ -615,6 +829,7 @@ fhatos> /sys/router/config/resolve/auto_prefix ->
 =>[
 ===>
 ===>/mmadt/
+===>/mmadt/ext/
 ===>/fos/
 ===>/fos/sys/
 ===>/fos/io/
@@ -631,7 +846,7 @@ fhatos> @a + 1
 fhatos> @a + 1
 ==>int8[128]@a
 fhatos> @a + 1                               // <3>
-[ERROR] [/sys/type] 129@a is not a /fos/int8 as defined by uint8()[is(gte(-127)).is(lte(128))]
+[ERROR] [/sys/type] 129@a is not a /mmadt/ext/int8 as defined by uint8()[is(gte(-127)).is(lte(128))]
 	  thrown at inst int8[128]@a => plus(1)[cpp] [0=>1]
 ----
 
@@ -644,6 +859,7 @@ fhatos> @a + 1                               // <3>
 <3> Triggering `int8` type error by overflowing its numeric range.
 
 |===
+====
 
 ==== Functional Types
 
@@ -657,7 +873,7 @@ image:trill.png[width=150,float=right,title=trill] In the code example above, th
 ----
 
 The line above looks daunting because it contains numerous https://en.wikipedia.org/wiki/Syntactic_sugar[syntactic sugars].
-Specifically, the binary and unary operators `->` (binary), `*` (unary), `_` (unary), `+` (binary), and `|` (unary).
+Specifically, the binary and unary operators `->` (binary), `*` (unary), `_` (unary), `+` (binary), and `\|` (unary).
 Each of these symbols ultimately parse down to an `inst`. Each having that familiar functional form of `f(a,b,c,...)`.
 For example, the _sugar free_ representation of the expression above is:
 
@@ -1108,7 +1324,7 @@ fhatos> [a=>1,b=>2].b     // <5>
 |lst   |    x  |   y  |  z  |    a |  b  |  c  |   d |  e  |   f  |    g
 |rec   |    x  |   y  |  z  |    a |  b  |  c  |   d |  e  |   f  |    g
 |inst  |    x  |   y  |  z  |    a |  b  |  c  |   d |  e  |   f  |    g
-|bcode |    x  |   y  |  z  |    a |  b  |  c  |   d |  e  |   f  |    g  
+|bcode |    x  |   y  |  z  |    a |  b  |  c  |   d |  e  |   f  |    g
 
 |===
 
@@ -1169,7 +1385,7 @@ fhatos> a?sub -> |print(_)
 ==>print?noobj<=obj(_)[noobj]
 fhatos> a -> 12
 ==>12
-msg[[target=>a,payload=>12,retain=>true]]fhatos> @a.inspect()
+12fhatos> @a.inspect()
 =>[
 ==>type=>[
 ===>id=>/mmadt/int
@@ -1188,9 +1404,9 @@ msg[[target=>a,payload=>12,retain=>true]]fhatos> @a.inspect()
 ===>on_recv=>print(_)
 =>]
 =>]
-msg[[target=>a,payload=>12@a,retain=>true]]fhatos> @a.plus(1)
+12@afhatos> @a.plus(1)
 ==>13@a
-msg[[target=>a,payload=>13@a,retain=>true]]fhatos> @a.plus(1).plus(1)
+13@afhatos> @a.plus(1).plus(1)
 ==>15@a
 ----
 
@@ -1225,11 +1441,11 @@ fhatos> /type/int/nat -> |is(gt(0))
 fhatos> nat[6]
 ==>nat[6]
 fhatos> nat[-6]
-[ERROR] [/sys/type] -6 is not a /fos/nat as defined by nat()[is(gte(0))]
+[ERROR] [/sys/type] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
 fhatos> nat[3].plus(2)
 ==>nat[5]
 fhatos> nat[3].mult(-2)
-[ERROR] [/sys/type] -6 is not a /fos/nat as defined by nat()[is(gte(0))]
+[ERROR] [/sys/type] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
 	  thrown at inst nat[3] => mult(-2)[cpp] [0=>-2]
 ----
 
@@ -1300,7 +1516,7 @@ fhatos> */sys/router/#/
 ==>]
 ===>frame=>[rec][_]
 ===>config=>[
-====>resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]
+====>resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/mmadt/ext/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]
 ==>]
 ===>query=>[
 ====>write=>[lock=>lock?obj{?}<=obj{?}()[cpp],sub=>sub?obj{?}<=obj()[cpp]]
@@ -1328,7 +1544,7 @@ Every structure implements the `structure.hpp` and ultimately, is an `obj`.
 - There are structures that encode `objs` as scoped variables when evaluating code (e.g. `frame`).
 - There are structures that encode other structures (e.g. `mnt`).
 
-The aggregate of all structures accessible through the router defines the complete memory footprint of a fHaTOS instance.
+The aggregate of all structures accessible through the router defines the complete memory footprint of a [blue]*F*​[red]#H#​[aqua]*a*​[yellow]#t#​[lime]#O#​[fuchsia]*s*​ instance.
 
 ++++
 <!-- 🐖 ./main_runner.out
@@ -1357,9 +1573,8 @@ fhatos> *a?sub                     // <4>
 =>]
 fhatos> a -> 'meangirl'            // <5>
 ==>'meangirl'
-[ERROR] [/sys/scheduler] [/mmadt/noobj] noobj accessed as uri
-	  thrown at inst msg[[target=>a,payload=>'meangirl',retain=>true]] => to(b) [0=>noobj,1=>true]
 fhatos> *b                         // <6>
+==>'meangirl'
 ----
 
 ++++
@@ -1404,9 +1619,6 @@ from(u)
 
 [source,mmadt]
 ----
-fhatos> '';u -> 'fhatos'
-==>'fhatos'
-==>'fhatos'
 fhatos> from(u)
 ==>'fhatos'
 fhatos> *u
@@ -1457,6 +1669,7 @@ An example itemization is provided below:
 
 [cols="3,5"]
 |===
+
 a|
 ++++
 <!-- 🐖 ./main_runner.out
@@ -1507,17 +1720,19 @@ fhatos> *a/#/           // <6>
 ++++
 
 a|
-====
+
+++++
 TIP: The first line in the example appears to be 4 https://en.wikipedia.org/wiki/Pascal_(programming_language)#Semicolons_as_statement_separators[individual statements].
 In fact, it is a single fluent expression. The signature of the `end` `inst` (sugar'd `;`) is `end?obj{0}\<=obj{*}`.
 This barrier step computes all monads up to it before emitting a `noobj` monad.
 With `end`, it's possible to write mm-ADT in the classic statement-oriented, imperative-style where semincolons (effectively) separate atomic operations.
-====
+++++
 
 <1> Dereferencing an `id`-node fURI to access a single `obj`.
 <2> Dereferencing an `id`-branch fURI to access a collection of `objs`.
 <3> Dereferencing a `pattern`-node fURI to access `objs` at respective nodes.
 <4> Dereferencing a `pattern`-branch fURI to access `objs` at respective branches.
+
 |===
 
 ===== Query Processors
@@ -1525,7 +1740,7 @@ With `end`, it's possible to write mm-ADT in the classic statement-oriented, imp
 Every fURI can have any number of key/value(s) pairs attached to it via the `?` query encoding scheme defined by the
 https://datatracker.ietf.org/doc/html/rfc3986#section-3.4[W3C URI] specification.
 Modules can be added to structures enabling different behaviors on read/write given associated, relevant `?` parameters.
-Example modules that come preloaded with fHaTOS are:
+Example modules that come preloaded with [lime]#f#​[aqua]#h#​[fuchsia]*A*​[blue]*T*​[red]#o#​[yellow]#s#​ are:
 
 . `pubsub`: supports asynchronous, event-based access to structure `objs`.
 .. `a?sub -> _` (subscribe )
@@ -1539,7 +1754,7 @@ Example modules that come preloaded with fHaTOS are:
 . `type`: provides an `obj` type system encoded within an `obj's` type fURI.
 .. `nat?dom=int&dc=1,1&rng=int&rc=1,1` (the `inst` signature of `nat?int<=int()[...]`)
 
-Other modules can be created and deployed across a fHaTOS cluster.
+Other modules can be created and deployed across a [fuchsia]#F#​[blue]*H*​[aqua]#a#​[red]*T*​[yellow]*o*​[lime]*S*​ cluster.
 
 .Query Free fURIs
 ****
@@ -1701,11 +1916,10 @@ fhatos> *a?sub
 fhatos> *b
 fhatos> a->12
 ==>12
-[ERROR] [/sys/scheduler] [/mmadt/noobj] noobj accessed as uri
-	  thrown at inst msg[[target=>a,payload=>12,retain=>true]] => to(b) [0=>noobj,1=>true]
 fhatos> *a
 ==>12
 fhatos> *b
+==>12
 ----
 
 ++++
@@ -1748,7 +1962,7 @@ subscribes to `a` with bcode of the form \$f(a) -> b\$. `12` is written to `a` w
 mm-ADT was designed to support the creation and manipulation of _abstract data types_ -- the "ADT" in mm-ADT.
 When expressing abstract data types is natural, then it's possible to leverage _multiple models_ such as key/value, document, relational, vector, graph, and the various nooks and crannies between -- the "mm" in mm-ADT.
 
-mm-ADT's URI addressing scheme makes it possible to _embed_ an array data types into the underlying fHaTOs structure.
+mm-ADT's URI addressing scheme makes it possible to _embed_ an array data types into the underlying [blue]*F*​[red]#h#​[lime]*A*​[fuchsia]*T*​[yellow]*O*​[aqua]#s#​ structure.
 This section will explore the following considerations when designing a _multi-model abstract data type_.
 
 . **spatial encodings**
@@ -1936,19 +2150,15 @@ fhatos> *m/+/0      // <3>
 ----
 
 ++++
-
 <!-- 🐓 -->
-
 ++++
 
 a🧱
 ++++
-
 <!-- 🐖 ./main_runner.out --- write matrix m -> [[0,1,2,3], /
 [4,5,6,7], /
 [8,9,10,11]]
 --- read matrix *m/0/0 --- <1> *m/0/+ --- <2> *m/+/0 --- <3> -->
-
 ++++
 
 [source,mmadt]
@@ -1993,9 +2203,7 @@ fhatos> *m/+/0      // <3>
 ----
 
 ++++
-
 <!-- 🐓 -->
-
 ++++
 
 |===
@@ -2066,7 +2274,7 @@ satisfy the resolution of the respective fURI.
 
 .FhatOS Console
 ****
-The FhatOS Console is a composite of 3 other actors:
+The [fuchsia]#F#​[lime]*h*​[red]*a*​[aqua]#T#​[yellow]*o*​[blue]*S*​ Console is a composite of 3 other actors:
 
 . The `Terminal` (`/sys/io/terminal/`) provides thread-safe access to hardware I/O.
 . The `Parser` (`/sys/lang/parser/`) converts string input to bytecode output.
@@ -2078,7 +2286,7 @@ The FhatOS Console is a composite of 3 other actors:
 https://en.wikipedia.org/wiki/MQTT[MQTT] is a publish/subscribe message passing protocol that has found extensive usage in embedded systems.
 Hierarchically specified _topics_ can be **subscribed** and **published** to.
 In MQTT, there is no direct communication between actors, though such behavior can be simulated if an actor's mailbox is a unique topic.
-FhatOS leverages MQTT, but from the vantage point of URIs instead of topics with message routing being location-aware.
+[fuchsia]#f#​[yellow]*h*​[blue]*A*​[lime]*T*​[red]#o#​[aqua]*S*​ leverages MQTT, but from the vantage point of URIs instead of topics with message routing being location-aware.
 There exist three MQTT routers:
 
 . `MonadRouter`: An MQTT router scoped to an active monad (**thread**) processing a monoid (**program**).
